blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/Trade_Quote__c.object-meta.xml
<CustomObject>
    <description>One request for quote (RFQ) and the quote sent in reply: what was asked for, the price, the lead time and the outcome. Sales handling, so it sits apart from the order that follows.</description>
    <label>Quote</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>