blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Approval_needed__c.field-meta.xml
<CustomField>
    <fullName>Approval_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The quote breaks a margin or credit rule and a manager must approve before it is sent.</description>
    <label>Approval needed</label>
    <type>Checkbox</type>
</CustomField>