blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every price request and quote for a customer.</description>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes_Company</relationshipName>
    <type>Lookup</type>
</CustomField>