blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Decline_reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_reason__c</fullName>
    <description>Why the quote was lost or not quoted. Required on the lost stage.</description>
    <label>Decline reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Lead time</fullName>
            </value>
            <value>
                <fullName>Cannot supply</fullName>
            </value>
            <value>
                <fullName>Specification not met</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
            </value>
            <value>
                <fullName>Bought elsewhere</fullName>
            </value>
            <value>
                <fullName>Out of scope</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>