blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Due_date__c.field-meta.xml
<CustomField>
    <fullName>Due_date__c</fullName>
    <description>The date the buyer asked for the quote. Late quotes are reported on.</description>
    <label>Quote due date</label>
    <type>Date</type>
</CustomField>