blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Lead_time_days__c.field-meta.xml
<CustomField>
    <fullName>Lead_time_days__c</fullName>
    <description>Quoted days from order to delivery to the customer.</description>
    <label>Lead time (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>