blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Margin_percent__c.field-meta.xml
<CustomField>
    <fullName>Margin_percent__c</fullName>
    <description>Expected gross margin on the quote. Over a set discount threshold it needs approval.</description>
    <label>Margin</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>