blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Product_family__c.field-meta.xml
<CustomField>
    <fullName>Product_family__c</fullName>
    <description>The main product group quoted. Used to see win rate and lead time by range.</description>
    <label>Product family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard range</fullName>
            </value>
            <value>
                <fullName>Made to order</fullName>
            </value>
            <value>
                <fullName>Spares and parts</fullName>
            </value>
            <value>
                <fullName>Bulk supply</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>