blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Received_date__c.field-meta.xml
<CustomField>
    <fullName>Received_date__c</fullName>
    <description>The day the RFQ arrived. Measures speed to quote.</description>
    <label>Received date</label>
    <type>Date</type>
</CustomField>