blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Requested_by__c.field-meta.xml
<CustomField>
    <fullName>Requested_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records who at the customer asked for the quote.</description>
    <label>Requested by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes requested</relationshipLabel>
    <relationshipName>Quotes_requested</relationshipName>
    <type>Lookup</type>
</CustomField>