blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>How the request reached us. Used to see which channels create work.</description>
    <label>RFQ source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Web form</fullName>
            </value>
            <value>
                <fullName>Customer portal</fullName>
            </value>
            <value>
                <fullName>Rep visit</fullName>
            </value>
            <value>
                <fullName>Tender portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>