blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Stock_checked__c.field-meta.xml
<CustomField>
    <fullName>Stock_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stock or production capacity has been checked for the quoted lead time.</description>
    <label>Stock checked</label>
    <type>Checkbox</type>
</CustomField>