blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Valid_until__c.field-meta.xml
<CustomField>
    <fullName>Valid_until__c</fullName>
    <description>Last day the quoted price holds.</description>
    <label>Valid until</label>
    <type>Date</type>
</CustomField>