blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Total quoted price excluding tax.</description>
    <label>Quote value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>