blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/validationRules/Gate_rfq_handling_accepted.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_rfq_handling_accepted</fullName>
    <active>true</active>
    <description>Stage gate: RFQ handling, Accepted and later stages need Quote value.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Received", 1, "Qualified", 2, "Pricing", 3, "Approval", 4, "Sent", 5, "Follow-up", 6, "Accepted", 7, 0) &gt;= 7, ISBLANK(Value__c))</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>Fill in Quote value before moving to Accepted.</errorMessage>
</ValidationRule>