blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/validationRules/Gate_rfq_handling_follow_up.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_rfq_handling_follow_up</fullName>
    <active>true</active>
    <description>Stage gate: RFQ handling, Follow-up and later stages need Quote value and Valid until.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Received", 1, "Qualified", 2, "Pricing", 3, "Approval", 4, "Sent", 5, "Follow-up", 6, "Accepted", 7, 0) &gt;= 6, OR(ISBLANK(Value__c), ISBLANK(Valid_until__c)))</errorConditionFormula>
    <errorMessage>Fill in Quote value and Valid until before moving to Follow-up.</errorMessage>
</ValidationRule>