blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/validationRules/Gate_rfq_handling_pricing.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_rfq_handling_pricing</fullName>
    <active>true</active>
    <description>Stage gate: RFQ handling, Pricing and later stages need Stock checked and Lead time (days).</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Received", 1, "Qualified", 2, "Pricing", 3, "Approval", 4, "Sent", 5, "Follow-up", 6, "Accepted", 7, 0) &gt;= 3, OR(NOT(Stock_checked__c), ISBLANK(Lead_time_days__c)))</errorConditionFormula>
    <errorMessage>Fill in Stock checked and Lead time (days) before moving to Pricing.</errorMessage>
</ValidationRule>