blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/validationRules/Gate_rfq_handling_qualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_rfq_handling_qualified</fullName>
    <active>true</active>
    <description>Stage gate: RFQ handling, Qualified and later stages need Product family and Quote due date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Received", 1, "Qualified", 2, "Pricing", 3, "Approval", 4, "Sent", 5, "Follow-up", 6, "Accepted", 7, 0) &gt;= 2, OR(ISBLANK(TEXT(Product_family__c)), ISBLANK(Due_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Product family and Quote due date before moving to Qualified.</errorMessage>
</ValidationRule>