blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/validationRules/Gate_rfq_handling_received.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_rfq_handling_received</fullName>
    <active>true</active>
    <description>Stage gate: RFQ handling, Received and later stages need Received date and RFQ source.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Received", 1, "Qualified", 2, "Pricing", 3, "Approval", 4, "Sent", 5, "Follow-up", 6, "Accepted", 7, 0) &gt;= 1, OR(ISBLANK(Received_date__c), ISBLANK(TEXT(Source__c))))</errorConditionFormula>
    <errorMessage>Fill in Received date and RFQ source before moving to Received.</errorMessage>
</ValidationRule>