blueprints/manufacturing-distribution/salesforce/force-app/main/default/objects/Trade_Quote__c/validationRules/Lost_rfq_handling_declined.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_rfq_handling_declined</fullName>
    <active>true</active>
    <description>Lost reason: RFQ handling, Declined needs Decline reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Declined"), ISBLANK(TEXT(Decline_reason__c)))</errorConditionFormula>
    <errorDisplayField>Decline_reason__c</errorDisplayField>
    <errorMessage>Fill in Decline reason before closing this as Declined.</errorMessage>
</ValidationRule>